packages/sdpl/sdpl-0.2.tar.gz/sdpl-0.2/grammar/sdplParser.py
# Generated from sdpl.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class sdplParser ( Parser ):

    grammarFileName = "sdpl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'REGISTER'", "'AS'", "';'", "'='", "'LOAD'", 
                     "'SCHEMA'", "'VERSION'", "'TABLE'", "'FROM'", "'WITH'", 
                     "'PROJECTION'", "'('", "')'", "','", "'.'", "'COMPUTE'", 
                     "':'", "'EXPAND'", "'STORE'", "'INTO'", "'JOIN'", "'BY'", 
                     "'FILTER'", "'ORDER'", "'GROUP'", "'''", "'$'", "'{'", 
                     "'}'", "'@'", "'%'", "'?'", "'*'", "'/'", "'+'", "'-'", 
                     "'^'", "'!='", "'=='", "'<='", "'<'", "'>='", "'>'", 
                     "'AND'", "'OR'", "'```'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "AO_MULTIPLY", "AO_DIVIDE", "AO_PLUS", 
                      "AO_MINUS", "AO_POWER", "CO_NE", "CO_EQ", "CO_LE", 
                      "CO_LT", "CO_GE", "CO_GT", "AND", "OR", "QUOTE_DELIM", 
                      "ID", "DECIMAL", "INTEGER", "WS", "SL_COMMENT" ]

    RULE_start_rule = 0
    RULE_libDecl = 1
    RULE_relationDecl = 2
    RULE_projectionDecl = 3
    RULE_projectionFields = 4
    RULE_projectionField = 5
    RULE_schemaField = 6
    RULE_computeDecl = 7
    RULE_computeExpression = 8
    RULE_arithmOperation = 9
    RULE_typedField = 10
    RULE_expandSchema = 11
    RULE_storeDecl = 12
    RULE_storeSchemaDecl = 13
    RULE_joinDecl = 14
    RULE_joinElement = 15
    RULE_relationColumns = 16
    RULE_relationColumn = 17
    RULE_filterDecl = 18
    RULE_filterExpression = 19
    RULE_filterOperation = 20
    RULE_orderByDecl = 21
    RULE_groupByDecl = 22
    RULE_quotedCode = 23
    RULE_operand = 24
    RULE_functionExpression = 25
    RULE_functionName = 26
    RULE_quotedString = 27
    RULE_compOperator = 28
    RULE_arithmOperator = 29

    ruleNames =  [ "start_rule", "libDecl", "relationDecl", "projectionDecl", 
                   "projectionFields", "projectionField", "schemaField", 
                   "computeDecl", "computeExpression", "arithmOperation", 
                   "typedField", "expandSchema", "storeDecl", "storeSchemaDecl", 
                   "joinDecl", "joinElement", "relationColumns", "relationColumn", 
                   "filterDecl", "filterExpression", "filterOperation", 
                   "orderByDecl", "groupByDecl", "quotedCode", "operand", 
                   "functionExpression", "functionName", "quotedString", 
                   "compOperator", "arithmOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    AO_MULTIPLY=33
    AO_DIVIDE=34
    AO_PLUS=35
    AO_MINUS=36
    AO_POWER=37
    CO_NE=38
    CO_EQ=39
    CO_LE=40
    CO_LT=41
    CO_GE=42
    CO_GT=43
    AND=44
    OR=45
    QUOTE_DELIM=46
    ID=47
    DECIMAL=48
    INTEGER=49
    WS=50
    SL_COMMENT=51

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Start_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(sdplParser.EOF, 0)

        def libDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.LibDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.LibDeclContext,i)


        def relationDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.RelationDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.RelationDeclContext,i)


        def projectionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.ProjectionDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.ProjectionDeclContext,i)


        def quotedCode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.QuotedCodeContext)
            else:
                return self.getTypedRuleContext(sdplParser.QuotedCodeContext,i)


        def expandSchema(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.ExpandSchemaContext)
            else:
                return self.getTypedRuleContext(sdplParser.ExpandSchemaContext,i)


        def storeDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.StoreDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.StoreDeclContext,i)


        def storeSchemaDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.StoreSchemaDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.StoreSchemaDeclContext,i)


        def joinDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.JoinDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.JoinDeclContext,i)


        def filterDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.FilterDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.FilterDeclContext,i)


        def orderByDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.OrderByDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.OrderByDeclContext,i)


        def groupByDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.GroupByDeclContext)
            else:
                return self.getTypedRuleContext(sdplParser.GroupByDeclContext,i)


        def getRuleIndex(self):
            return sdplParser.RULE_start_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_rule" ):
                listener.enterStart_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_rule" ):
                listener.exitStart_rule(self)




    def start_rule(self):

        localctx = sdplParser.Start_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 71
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 60
                    self.libDecl()
                    pass

                elif la_ == 2:
                    self.state = 61
                    self.relationDecl()
                    pass

                elif la_ == 3:
                    self.state = 62
                    self.projectionDecl()
                    pass

                elif la_ == 4:
                    self.state = 63
                    self.quotedCode()
                    pass

                elif la_ == 5:
                    self.state = 64
                    self.expandSchema()
                    pass

                elif la_ == 6:
                    self.state = 65
                    self.storeDecl()
                    pass

                elif la_ == 7:
                    self.state = 66
                    self.storeSchemaDecl()
                    pass

                elif la_ == 8:
                    self.state = 67
                    self.joinDecl()
                    pass

                elif la_ == 9:
                    self.state = 68
                    self.filterDecl()
                    pass

                elif la_ == 10:
                    self.state = 69
                    self.orderByDecl()
                    pass

                elif la_ == 11:
                    self.state = 70
                    self.groupByDecl()
                    pass


                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sdplParser.T__0) | (1 << sdplParser.T__17) | (1 << sdplParser.T__18) | (1 << sdplParser.QUOTE_DELIM) | (1 << sdplParser.ID))) != 0)):
                    break

            self.state = 75
            self.match(sdplParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LibDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quotedString(self):
            return self.getTypedRuleContext(sdplParser.QuotedStringContext,0)


        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def getRuleIndex(self):
            return sdplParser.RULE_libDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLibDecl" ):
                listener.enterLibDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLibDecl" ):
                listener.exitLibDecl(self)




    def libDecl(self):

        localctx = sdplParser.LibDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_libDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(sdplParser.T__0)
            self.state = 78
            self.quotedString()
            self.state = 81
            _la = self._input.LA(1)
            if _la==sdplParser.T__1:
                self.state = 79
                self.match(sdplParser.T__1)
                self.state = 80
                self.match(sdplParser.ID)


            self.state = 83
            self.match(sdplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RelationDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def quotedString(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.QuotedStringContext)
            else:
                return self.getTypedRuleContext(sdplParser.QuotedStringContext,i)


        def INTEGER(self):
            return self.getToken(sdplParser.INTEGER, 0)

        def getRuleIndex(self):
            return sdplParser.RULE_relationDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationDecl" ):
                listener.enterRelationDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationDecl" ):
                listener.exitRelationDecl(self)




    def relationDecl(self):

        localctx = sdplParser.RelationDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_relationDecl)
        try:
            self.state = 108
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(sdplParser.ID)
                self.state = 86
                self.match(sdplParser.T__3)
                self.state = 87
                self.match(sdplParser.T__4)
                self.state = 88
                self.match(sdplParser.T__5)
                self.state = 89
                self.quotedString()
                self.state = 90
                self.match(sdplParser.T__6)
                self.state = 91
                self.match(sdplParser.INTEGER)
                self.state = 92
                self.match(sdplParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(sdplParser.ID)
                self.state = 95
                self.match(sdplParser.T__3)
                self.state = 96
                self.match(sdplParser.T__4)
                self.state = 97
                self.match(sdplParser.T__7)
                self.state = 98
                self.quotedString()
                self.state = 99
                self.match(sdplParser.T__8)
                self.state = 100
                self.quotedString()
                self.state = 101
                self.match(sdplParser.T__9)
                self.state = 102
                self.match(sdplParser.T__5)
                self.state = 103
                self.quotedString()
                self.state = 104
                self.match(sdplParser.T__6)
                self.state = 105
                self.match(sdplParser.INTEGER)
                self.state = 106
                self.match(sdplParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProjectionDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def projectionFields(self):
            return self.getTypedRuleContext(sdplParser.ProjectionFieldsContext,0)


        def getRuleIndex(self):
            return sdplParser.RULE_projectionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProjectionDecl" ):
                listener.enterProjectionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProjectionDecl" ):
                listener.exitProjectionDecl(self)




    def projectionDecl(self):

        localctx = sdplParser.ProjectionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_projectionDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(sdplParser.ID)
            self.state = 111
            self.match(sdplParser.T__3)
            self.state = 112
            self.match(sdplParser.T__5)
            self.state = 113
            self.match(sdplParser.T__10)
            self.state = 114
            self.match(sdplParser.T__11)
            self.state = 115
            self.projectionFields()
            self.state = 116
            self.match(sdplParser.T__12)
            self.state = 117
            self.match(sdplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProjectionFieldsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def projectionField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.ProjectionFieldContext)
            else:
                return self.getTypedRuleContext(sdplParser.ProjectionFieldContext,i)


        def getRuleIndex(self):
            return sdplParser.RULE_projectionFields

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProjectionFields" ):
                listener.enterProjectionFields(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProjectionFields" ):
                listener.exitProjectionFields(self)




    def projectionFields(self):

        localctx = sdplParser.ProjectionFieldsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_projectionFields)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.projectionField()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==sdplParser.T__13:
                self.state = 120
                self.match(sdplParser.T__13)
                self.state = 121
                self.projectionField()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProjectionFieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def schemaField(self):
            return self.getTypedRuleContext(sdplParser.SchemaFieldContext,0)


        def computeDecl(self):
            return self.getTypedRuleContext(sdplParser.ComputeDeclContext,0)


        def getRuleIndex(self):
            return sdplParser.RULE_projectionField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProjectionField" ):
                listener.enterProjectionField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProjectionField" ):
                listener.exitProjectionField(self)




    def projectionField(self):

        localctx = sdplParser.ProjectionFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_projectionField)
        try:
            self.state = 129
            token = self._input.LA(1)
            if token in [sdplParser.AO_MINUS, sdplParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.schemaField()

            elif token in [sdplParser.T__15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.computeDecl()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SchemaFieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(sdplParser.ID)
            else:
                return self.getToken(sdplParser.ID, i)

        def getRuleIndex(self):
            return sdplParser.RULE_schemaField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchemaField" ):
                listener.enterSchemaField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchemaField" ):
                listener.exitSchemaField(self)




    def schemaField(self):

        localctx = sdplParser.SchemaFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_schemaField)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if _la==sdplParser.AO_MINUS:
                self.state = 131
                self.match(sdplParser.AO_MINUS)


            self.state = 134
            self.match(sdplParser.ID)
            self.state = 135
            self.match(sdplParser.T__14)
            self.state = 136
            _la = self._input.LA(1)
            if not(_la==sdplParser.AO_MULTIPLY or _la==sdplParser.ID):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 139
            _la = self._input.LA(1)
            if _la==sdplParser.T__1:
                self.state = 137
                self.match(sdplParser.T__1)
                self.state = 138
                self.match(sdplParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComputeDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def computeExpression(self):
            return self.getTypedRuleContext(sdplParser.ComputeExpressionContext,0)


        def typedField(self):
            return self.getTypedRuleContext(sdplParser.TypedFieldContext,0)


        def getRuleIndex(self):
            return sdplParser.RULE_computeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComputeDecl" ):
                listener.enterComputeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComputeDecl" ):
                listener.exitComputeDecl(self)




    def computeDecl(self):

        localctx = sdplParser.ComputeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_computeDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(sdplParser.T__15)
            self.state = 142
            self.computeExpression(0)
            self.state = 143
            self.match(sdplParser.T__1)
            self.state = 144
            self.typedField()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComputeExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmOperation(self):
            return self.getTypedRuleContext(sdplParser.ArithmOperationContext,0)


        def computeExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.ComputeExpressionContext)
            else:
                return self.getTypedRuleContext(sdplParser.ComputeExpressionContext,i)


        def arithmOperator(self):
            return self.getTypedRuleContext(sdplParser.ArithmOperatorContext,0)


        def getRuleIndex(self):
            return sdplParser.RULE_computeExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComputeExpression" ):
                listener.enterComputeExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComputeExpression" ):
                listener.exitComputeExpression(self)



    def computeExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = sdplParser.ComputeExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_computeExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 147
                self.arithmOperation()
                pass

            elif la_ == 2:
                self.state = 148
                self.match(sdplParser.T__11)
                self.state = 149
                self.computeExpression(0)
                self.state = 150
                self.match(sdplParser.T__12)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = sdplParser.ComputeExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_computeExpression)
                    self.state = 154
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 155
                    self.arithmOperator()
                    self.state = 156
                    self.computeExpression(4) 
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ArithmOperationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionExpression(self):
            return self.getTypedRuleContext(sdplParser.FunctionExpressionContext,0)


        def operand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdplParser.OperandContext)
            else:
                return self.getTypedRuleContext(sdplParser.OperandContext,i)


        def arithmOperator(self):
            return self.getTypedRuleContext(sdplParser.ArithmOperatorContext,0)


        def arithmOperation(self):
            return self.getTypedRuleContext(sdplParser.ArithmOperationContext,0)


        def getRuleIndex(self):
            return sdplParser.RULE_arithmOperation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmOperation" ):
                listener.enterArithmOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmOperation" ):
                listener.exitArithmOperation(self)




    def arithmOperation(self):

        localctx = sdplParser.ArithmOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arithmOperation)
        try:
            self.state = 172
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.functionExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.operand()
                self.state = 165
                self.arithmOperator()
                self.state = 166
                self.operand()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.match(sdplParser.T__11)
                self.state = 169
                self.arithmOperation()
                self.state = 170
                self.match(sdplParser.T__12)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypedFieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(sdplParser.ID)
            else:
                return self.getToken(sdplParser.ID, i)

        def getRuleIndex(self):
            return sdplParser.RULE_typedField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedField" ):
                listener.enterTypedField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedField" ):
                listener.exitTypedField(self)




    def typedField(self):

        localctx = sdplParser.TypedFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typedField)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(sdplParser.ID)
            self.state = 175
            self.match(sdplParser.T__16)
            self.state = 176
            self.match(sdplParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpandSchemaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(sdplParser.ID, 0)

        def getRuleIndex(self):
            return sdplParser.RULE_expandSchema

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpandSchema" ):
                listener.enterExpandSchema(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpandSchema" ):
                listener.exitExpandSchema(self)




    def expandSchema(self):

        localctx = sdplParser.ExpandSchemaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expandSchema)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(sdplParser.T__17)
            self.state = 179
            self.match(sdplParser.T__5)
            self.state = 180
            self.match(sdplParser.ID)
            self.state = 181
            self.match(sdplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StoreDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
